--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 JWT_SECRET = 'my-secret-jwt-auth' 
 JWT_EXPIRE = '1d'
-PORT = 5000
+
+CONNECTION_URL = 'mongodb+srv://affan12345:affan12345@memory-app.xmn39.mongodb.net/memoryApp?retryWrites=true&w=majority'
